appId: com.pauloruszel.obradocs
---
- tapOn: "Abrir minha conta"
- tapOn: "Sair da conta"
- assertVisible: "Acessar sua conta"
